@@ -12,4 +12,5 @@ Makefile.PL
 MANIFEST			This list of files
 META.yml
 README
+t/pod.t
 t/search-basic.t
