@@ -1,9 +1,13 @@
+--- 
 author: Martin Thurn <mthurn@cpan.org>
 build_requires: 
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.64
+generated_by: Module::Install version 0.67
 license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
 name: WWW-Search-Search
 no_index: 
   directory: 
@@ -14,4 +18,4 @@ requires:
   URI::Escape: 0
   WWW::Search: 0
   perl: 5.004
-version: 1.004
+version: 1.007
