@@ -18,12 +18,19 @@ my @ao;
 
 # This test returns no results (but we should not get an HTTP error):
 diag("Sending bogus query to search.com...");
+$iDebug = 0;
+$iDump = 1;
 &tm_run_test('normal', $WWW::Search::Test::bogus_query, 0, 0, $iDebug);
+
+diag("Sending multi-page query to search.com...");
+$iDebug = 0;
+$iDump = 0;
+&tm_run_test('normal', 'the lovely Britney Spears', 21, undef, $iDebug, $iDump);
 TEST_NOW:
 diag("Sending 1-page query to search.com...");
 $iDebug = 0;
-$iDump = 1;
-&tm_run_test('normal', 'oden'.'ized', 1, 9, $iDebug, $iDump);
+$iDump = 0;
+&tm_run_test('normal', 'oden'.'istic', 1, 9, $iDebug, $iDump);
 # Look at some actual results:
 @ao = $WWW::Search::Test::oSearch->results();
 cmp_ok(0, '<', scalar(@ao), 'got any results');
@@ -39,11 +46,7 @@ foreach my $oResult (@ao)
   cmp_ok($oResult->description, 'ne', '',
          'result description is not empty');
   } # foreach
-# goto ALL_DONE; # for debugging
-diag("Sending multi-page query to search.com...");
-$iDebug = 0;
-$iDump = 0;
-&tm_run_test('normal', 'the lovely Britney Spears', 21, undef, $iDebug, $iDump);
+goto ALL_DONE; # for debugging
 ALL_DONE:
 exit 0;
 
